Restructure files; add touch icon

--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,15 @@
   <title>
     MPV Remote Control
   </title>
-  <script type='text/javascript' src='eventListeners.js'></script>
-  <link rel='stylesheet' type='text/css' href='style.css' />
+  <script type='text/javascript' src='scripts/eventListeners.js'></script>
+  <link rel='stylesheet' type='text/css' href='styles/style.css' />
+  <link rel="apple-touch-icon" sizes="120x120" href="images/touch-icon-iphone-retina.png">
 </head>
 
 <body>
   <section class='container'>
-    <div id='go-back' class='media-control'><img src='go-back.svg' alt='go back button'></img></div>
-    <div id='play-pause' class='media-control'><img src='play-pause.svg' alt='play/pause button'></div>
-    <!-- <div id='play-pause' class='media-control'>►/❚❚</div> -->
+    <div id='go-back' class='media-control'><img src='images/go-back.svg' alt='go back button'></img></div>
+    <div id='play-pause' class='media-control'><img src='images/play-pause.svg' alt='play/pause button'></div>
   </section>
 </body>
 
